<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/big_gap"
    android:orientation="vertical"
    android:padding="@dimen/base_gap"
    tools:context=".ShareActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big_gap"
        android:text="@string/text_shared_information"
        android:textSize="@dimen/medium_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_gap"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:text="@string/text_user"
            android:textColor="@color/color_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_shared_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_gap"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:text="@string/text_password"
            android:textColor="@color/color_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_shared_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_gap"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:text="@string/text_email"
            android:textColor="@color/color_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_shared_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_gap"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:text="@string/text_gender"
            android:textColor="@color/color_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_shared_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_size" />
    </LinearLayout>

</LinearLayout>